syntax = "proto3";

package listings;

service ListingsService {
  rpc CreateListing (CreateListingRequest) returns (CreateListingResponse);
  rpc GetListing (GetListingRequest) returns (GetListingResponse);
  rpc ListListings (ListListingsRequest) returns (ListListingsResponse);
  rpc UpdateListing (UpdateListingRequest) returns (UpdateListingResponse);
  rpc DeleteListing (DeleteListingRequest) returns (DeleteListingResponse);
}

message CreateListingRequest {
  string userId = 1;
  string title = 2;
  string description = 3;
  double price = 4;
  string currency = 5;
  string category = 6;
  map<string, string> metadata = 7;
}

message CreateListingResponse {
  bool success = 1;
  string listingId = 2;
}

message GetListingRequest {
  string listingId = 1;
}

message GetListingResponse {
  Listing listing = 1;
}

message ListListingsRequest {
  string userId = 1;
  int32 limit = 2;
  int32 offset = 3;
  string category = 4;
  string status = 5;
}

message ListListingsResponse {
  repeated Listing listings = 1;
  int32 total = 2;
}

message UpdateListingRequest {
  string listingId = 1;
  string title = 2;
  string description = 3;
  double price = 4;
  string currency = 5;
  string category = 6;
  string status = 7;
  map<string, string> metadata = 8;
}

message UpdateListingResponse {
  bool success = 1;
}

message DeleteListingRequest {
  string listingId = 1;
}

message DeleteListingResponse {
  bool success = 1;
}

message Listing {
  string id = 1;
  string userId = 2;
  string title = 3;
  string description = 4;
  double price = 5;
  string currency = 6;
  string category = 7;
  string status = 8;
  string createdAt = 9;
  string updatedAt = 10;
  map<string, string> metadata = 11;
} 